Emacs - Fix "Symbol's function definition is void: \(setf\ ..."
Happened the first time opening a shell file

--- a/emacs/.emacs.d/awaken.org
+++ b/emacs/.emacs.d/awaken.org
@@ -8970,7 +8970,7 @@ Have ~export HATCH_ENV_TYPE_VIRTUAL_PATH=.venv~ in =.profile= so autoenv and pyr
     (general-pushnew (cons 'bash-ts-mode "shellscript")
                      lsp-language-id-configuration))
   (general-with 'flycheck
-    (setf (flycheck-checker-get 'sh-bash 'modes) (list 'sh-mode 'bash-ts-mode))
+    (put 'sh-bash 'flycheck-modes (list 'sh-mode 'bash-ts-mode))
     (general-pushnew 'zsh flycheck-shellcheck-supported-shells)))
 
 (use-package company-shell
