--- a/emacs/.emacs.d/awaken.org
+++ b/emacs/.emacs.d/awaken.org
@@ -9939,6 +9939,48 @@ That said, I don't do many complicated things in terminal, so I mostly use a ded
   :ghook 'eshell-mode-hook)
 #+end_src
 
+** GPT and AI
+*** Get API Key
+ #+begin_src emacs-lisp
+(defun noct-get-openai-key ()
+  "Return openapi key."
+  (password-store-get-field "openai" "apikey"))
+ #+end_src
+
+*** DALL-E
+ #+begin_src emacs-lisp
+(use-package openai
+  :straight (openai :host github :repo "emacs-openai/openai")
+  :config
+  (setq openai-key (noct-get-openai-key)))
+
+(use-package dall-e
+  :straight (dall-e :host github :repo "emacs-openai/dall-e")
+  :config
+  (gsetq dall-e-n 3
+         dall-e-size "1024x1024")
+
+  (general-def 'normal dall-e-mode-map
+    "RET" #'dall-e-type-response)
+
+  (noct-handle-popup-same-window (rx "*DALL-E")))
+ #+end_src
+
+*** Gptel
+ #+begin_src emacs-lisp
+(use-package gptel
+  :straight (gptel :host github :repo "karthink/gptel")
+  :general
+  (general-s "RET" #'gptel)
+  (general-def 'normal gptel-mode-map "RET" #'gptel-send)
+  (general-def 'visual "RET" #'gptel-send)
+  :config
+  (gsetq gptel-api-key #'noct-get-openai-key
+         gptel-default-mode 'org-mode)
+
+  (noct-handle-popup-same-window (rx "*ChatGPT")))
+ #+end_src
+
 ** Shell
 Shell has some of the advantages of eshell like ~completing-read~ integration in ~term-line-mode~, but it supports zsh and other shells.  Plugins like autosuggestions won't work in line mode (and at least with this basic configuration autosuggestions don't seem to work in char-mode either for fish or zsh). Obviously, it can't execute emacs lisp. It can run it on a remote host, but the shell has to be available there.
 
